# python-project-lvl1

./: Makefile  README.md  pyproject.toml
.github/workflows/: README.md  make_lint.yml
brain_games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games1.py  brain_gcd.py  brain_prime.py  brain_progression.py
