[tool.poetry]
packages = [
    {include = "brain_games"},
]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Gravitcapa-py <gravitcapa.py@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games1:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"